--- a/package.json
+++ b/package.json
@@ -9,23 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "js-cookie": "^3.0.5",
-    "next": "15.1.3",
-    "nodemailer": "^6.9.16",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "js-cookie": "^3.0.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "typescript": "latest"
   }
 }
