--- a/package.json
+++ b/package.json
@@ -6,17 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "js-cookie": "^3.0.5"
+    "react-dom": "latest"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "22.10.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "typescript": "latest"
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
+    "nodemailer": "^6.9.16",
+    "prettier": "^3.4.2",
+    "typescript": "latest",
+    "typescript-eslint": "^8.18.2"
   }
 }
