--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "22.10.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "latest",
+    "@types/react": "19.0.2",
     "@types/react-dom": "latest",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
@@ -34,7 +35,7 @@
     "globals": "^15.14.0",
     "nodemailer": "^6.9.16",
     "prettier": "^3.4.2",
-    "typescript": "latest",
+    "typescript": "5.7.2",
     "typescript-eslint": "^8.18.2"
   }
 }
