--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.1.0",
     "js-cookie": "^3.0.5",
     "next": "latest",
     "next-auth": "^4.24.11",
