--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint .",
     "format": "prettier --write ."
+
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -17,7 +18,8 @@
     "next-auth": "^4.24.11",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -26,6 +28,8 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.2",
     "@types/react-dom": "latest",
+    "@types/toastr": "^2.1.43",
+    "@types/web-push": "^3.6.4",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "eslint": "^9.17.0",
